Better footnotes entry and xrefs entry
https://github.com/bibledit/cloud/issues/414 and  https://github.com/bibledit/cloud/issues/412

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.904: Inserting a cross reference in the verse and chapter editors no longer adds a keyword.</p>
+<p>5.0.904: Send/receive on a client no longer removes a space from new footnotes.</p>
 <p>5.0.903: If a Bible editor has focus, and its text is reloaded, it will be read-only for some seconds.</p>
 <p>5.0.903: If a Bible editor has focus, it shows a notification when the text is reloaded.</p>
 <p>5.0.903: Entering a cross reference adds the reference, the keyword, and the cross reference text.</p>
