--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,7 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p>5.0.907: Fixed: Chapter poller timing caused the "Text reloaded" message to appear at a chapter switch.</p>
-<p>5.0.905: When navigating to another chapter while editing Bible text, the "Text reloaded" no longer comes up.</p>
+<p>5.0.905: When navigating to another chapter the Bible editor no longer displays "Text reloaded".</p>
 <p>5.0.904: Inserting a cross reference in the verse and chapter editors no longer adds a keyword.</p>
 <p>5.0.904: Send/receive on a client no longer removes a space from new footnotes.</p>
 <p>5.0.903: If a Bible editor has focus, and its text is reloaded, it will be read-only for some seconds.</p>
