--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.909: Fixed: Sends email "Check whether Bible text was saved" even if the changes consist of whitespace only.</p>
 <p>5.0.908: A setting for using a dot or a colon as the verse separator for Bible notes entry.</p>
 <p>5.0.907: Fixed: Chapter poller timing caused the "Text reloaded" message to appear at a chapter switch.</p>
 <p>5.0.905: When navigating to another chapter the Bible editor no longer displays "Text reloaded".</p>
