--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.913: The Quill editing library was updated to version 1.3.6.</p>
 <p>5.0.912: Fixed: Bad network connection causes "Text reloaded" messages in Bible editors.</p>
 <p>5.0.909: Fixed: Sends email "Check whether Bible text was saved" even if the changes consist of whitespace only.</p>
 <p>5.0.908: A setting for using a dot or a colon as the verse separator for Bible notes entry.</p>
