--- a/developer/index.html
+++ b/developer/index.html
@@ -16,6 +16,7 @@
   <input type="text" id="textinput">
 </p>
 <p><a href="../edit2/index">Chapter editor version 2</a></p>
+<p><a href="../editone2/index">Verse editor version 2</a></p>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 <pre><code>
