Keep edits made while updating from server/device
https://github.com/bibledit/cloud/issues/426

--- a/editone2/index.html
+++ b/editone2/index.html
@@ -25,6 +25,7 @@
 <div id="oneprefix" class="bibleeditor ##custom_class##"></div>
 <div id="oneeditor" class="bibleeditor ##custom_class##"></div>
 <div id="onesuffix" class="bibleeditor ##custom_class##"></div>
+<div id="onetemp" class="bibleeditor ##custom_class##"></div>
 <script>
   ##script##
 </script>
