--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.916: A working beta version of live updatable verse editor.</p>
 <p>5.0.914: The timed "Text reloaded" messages no longer pop up in the Bible editors.</p>
 <p>5.0.913: The Quill editing library was updated to version 1.3.6.</p>
 <p>5.0.912: Fixed: Bad network connection causes "Text reloaded" messages in Bible editors.</p>
