--- a/unittests/tests/editone03.html
+++ b/unittests/tests/editone03.html
@@ -1,1 +1,1 @@
-<p class="q1"><span class="v">5</span><span> </span><span>Last verse, without a note.</span></p>
+<p class="q1"><span class="i-v">5</span><span> </span><span>Last verse, without a note.</span></p>
