--- a/unittests/tests/editone06verse3suffix.html
+++ b/unittests/tests/editone06verse3suffix.html
@@ -1,1 +1,1 @@
-<p class="p"><span class="v">4</span><span> </span><span>Verse 4.</span></p>
+<p class="b-p"><span class="i-v">4</span><span> </span><span>Verse 4.</span></p>
