--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.917: The "Text reloaded" message was disabled in the chapter editor.</p>
 <p>5.0.917: Fixed: Note text after a new line in a footnote disappears.</p>
 <p>5.0.916: A working beta version of live updatable verse editor.</p>
 <p>5.0.914: The timed "Text reloaded" messages no longer pop up in the Bible editors.</p>
