Slightly larger arrows for going a verse back and a verse forward
Fixes https://github.com/bibledit/cloud/issues/432

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.918: Slightly larger arrows for going a verse back and a verse forward.</p>
 <p>5.0.917: Fixed: Pasting text into the chapter editor causes loss of focus.</p>
 <p>5.0.917: The "Text reloaded" message was disabled in the chapter editor.</p>
 <p>5.0.917: Fixed: Note text after a new line in a footnote disappears.</p>
