--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.920: Fix: Tapping a non-focused verse focuses that verse in the verse editor.</p>
 <p>5.0.919: Bibledit Windows can receive the focused passage from Paratext.</p>
 <p>5.0.918: Insert footnote template without the | separator(s).</p>
 <p>5.0.918: Better sorting of consultation notes order.</p>
