--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.923: More robust handling of user-initiated deletion of critical footnote content in verse editor.</p>
 <p>5.0.921: Verse editor no longer reloads text, but updates existing text instead.</p>
 <p>5.0.920: Fix: Tapping a non-focused verse focuses that verse in the verse editor.</p>
 <p>5.0.919: Bibledit Windows can receive the focused passage from Paratext.</p>
