Bibledit kernel can receive Accordance reference and set its focus
https://github.com/bibledit/cloud/issues/437

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -255,10 +255,22 @@ translate("Verse separator for Bible notes entry"):
 <!-- #BEGINZONE windows -->
 <br>
 <p>
-translate("Receive focused reference from Paratext"):
+translate("Receive focused verse reference from Paratext"):
 <a href="?referencefromparatext">##referencefromparatext##</a>.
 </p>
 <!-- #ENDZONE windows -->
+
+
+<!-- #BEGINZONE macos -->
+<br>
+<p>
+translate("Receive focused verse reference from Accordance on macOS"):
+<a href="?referencefromaccordance">##referencefromaccordance##</a>.
+translate("In Accordance, enable this in Preferences / General / Synchronize text with other applications.")
+translate("Bibledit always sends the focused verse reference to Accordance.")
+
+</p>
+<!-- #ENDZONE macos -->
 
 
 <br>
