--- a/developer/index.html
+++ b/developer/index.html
@@ -16,7 +16,7 @@
   <input type="text" id="textinput">
 </p>
 <p><a href="../edit2/index">Chapter editor version 2 beta</a></p>
-<p><a href="?debug=setaccordance">Prepare reference for Accordance</a></p>
+<p><a href="?debug=accordance">Reference for Accordance</a></p>
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 <pre><code>
