--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.927: Can exchange focused verse with Accordance on macOS.</p>
 <p>5.0.926: If a book is not found in a Paratext folder, Bibledit lists the \id it looked for.</p>
 <p>5.0.924: Updated embedded Chromium browser in Windows client.</p>
 <p>5.0.924: Fixed: Formatting error after editing cross references and footnotes.</p>
