Tested Accordance @ Windows
Bibledit receives references from Paratext and also from Accordance on Windows. https://github.com/bibledit/cloud/issues/437

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -255,8 +255,9 @@ translate("Verse separator for Bible notes entry"):
 <!-- #BEGINZONE windows -->
 <br>
 <p>
-translate("Receive focused verse reference from Paratext"):
+translate("Receive focused verse reference from Paratext and Accordance"):
 <a href="?referencefromparatext">##referencefromparatext##</a>.
+translate("In Accordance, enable this in Preferences / General / Synchronize text with other applications.")
 </p>
 <!-- #ENDZONE windows -->
 
@@ -264,7 +265,7 @@ translate("Receive focused verse reference from Paratext"):
 <!-- #BEGINZONE macos -->
 <br>
 <p>
-translate("Receive focused verse reference from Accordance on macOS"):
+translate("Receive focused verse reference from Accordance"):
 <a href="?referencefromaccordance">##referencefromaccordance##</a>.
 translate("In Accordance, enable this in Preferences / General / Synchronize text with other applications.")
 translate("Bibledit always sends the focused verse reference to Accordance.")
