Colored note status labels
https://github.com/bibledit/cloud/issues/455

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.929: Optionally coloured note status labels.</p>
 <p>5.0.928: Moves notes from the non-editable prefix to the very end in the verse editor.</p>
 <p>5.0.927: Updates the non-editable parts of the verse editor.</p>
 <p>5.0.927: Can exchange focused verse with Accordance on macOS.</p>
