--- a/personalize/index.html
+++ b/personalize/index.html
@@ -223,6 +223,12 @@ translate ("The list of consultation notes shows the Bible the note refers to"):
 translate ("The consultation notes show the note status"):
 <a href="?shownotestatus">##shownotestatus##</a>.
 </p>
+<!-- #BEGINZONE notestatuson -->
+<p>
+translate("Show the status of the consultation notes in colour"):
+<a href="?colorednotetatus=">##colorednotetatus##</a>.
+</p>
+<!-- #ENDZONE notestatuson -->
 <!-- #ENDZONE advancedmode -->
 
 <!-- #BEGINZONE advancedmode -->
