--- a/checks/settings.html
+++ b/checks/settings.html
@@ -84,6 +84,11 @@ translate("no-break space at French punctuation")
 translate("multiple « in French citation style")
 </p>
 
+<p>
+<input type="checkbox" name="transposenotes" onchange="checkbox(this)" ##transposenotes## />
+translate("transpose and fix double spaces in footnotes and cross references")
+</p>
+
 <br>
 <p><a href="settingssentences">translate("Settings for the sentence structure")</a></p>
 
