--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.933: Transpose and fix double spaces in footnotes and cross references.</p>
 <p>5.0.932: Translate standardized focused verse from Paratext to local verse mapping.</p>
 <p>5.0.932: Forwards Bible from editone to editone2 in a workspace.</p>
 <p>5.0.929: Runs on Mac M1 with arm64 processor.</p>
