--- a/checks/settings.html
+++ b/checks/settings.html
@@ -89,6 +89,11 @@ translate("multiple « in French citation style")
 translate("transpose and fix double spaces in footnotes and cross references")
 </p>
 
+<p>
+<input type="checkbox" name="validutf8" onchange="checkbox(this)" ##validutf8## />
+translate("valid UTF-8 Unicode text")
+</p>
+
 <br>
 <p><a href="settingssentences">translate("Settings for the sentence structure")</a></p>
 
