--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.934: Can check on invalid UTF-8 text in a verse.</p>
+<p>5.0.934: Exporting invalid UTF-8 text gets recorded in the journal.</p>
 <p>5.0.933: Transpose and fix double spaces in footnotes and cross references.</p>
 <p>5.0.932: Translate standardized focused verse from Paratext to local verse mapping.</p>
 <p>5.0.932: Forwards Bible from editone to editone2 in a workspace.</p>
