Information GitHub repository was updated with an example of using a personal access token
https://github.com/bibledit/cloud/issues/468

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.934: Information GitHub repository was updated with an example of using a personal access token.</p>
 <p>5.0.934: Can check on invalid UTF-8 text in a verse.</p>
 <p>5.0.934: Exporting invalid UTF-8 text gets recorded in the journal.</p>
 <p>5.0.933: Transpose and fix double spaces in footnotes and cross references.</p>
