--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.937: The USFM editor can reload text in corrupted encoding and save it as valid UTF-8 Unicode.</p>
 <p>5.0.936: Allows a space at the end of a line in the verse editor to exist multiple seconds before the editor trims it away.</p>
 <p>5.0.935: Configure the https port of embedded webserver, or disable it.</p>
 <p>5.0.934: Information about connecting to a GitHub repository was updated with an example of using a personal access token.</p>
