Logout from Indonesian Free cloud
https://github.com/bibledit/cloud/issues/487

--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -6,8 +6,11 @@
 translate("The language for Bibledit:")
 <a href="?language=select">##language##</a>.
 </p>
-<br>
 
+<br>
+<p>
+<a href="/session/logout">translate ("Logout.")</a>
+</p>
 
 <script type="text/javascript" src="../assets/checkbox.js"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
