Link to advanced edition start linking to albata.info
https://github.com/bibledit/cloud/issues/487

--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -12,5 +12,10 @@ translate("The language for Bibledit:")
 <a href="/session/logout">translate ("Logout.")</a>
 </p>
 
+<br>
+<p>
+<a href="https://albata.info" target="_blank">translate ("Visit albata.info for more information.")</a>
+</p>
+
 <script type="text/javascript" src="../assets/checkbox.js"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
