Can rename Bible
https://github.com/bibledit/cloud/issues/487 Enable the user to be able to change the name of his translation.
Put that in the settings.

--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -2,6 +2,12 @@
 <p class="success">##success##</p>
 <p>##journal##</p>
 
+<br>
+<p>
+<a href="/session/logout">translate ("Logout.")</a>
+</p>
+
+<br>
 <p>
 translate("The language for Bibledit:")
 <a href="?language=select">##language##</a>.
@@ -9,7 +15,9 @@ translate("The language for Bibledit:")
 
 <br>
 <p>
-<a href="/session/logout">translate ("Logout.")</a>
+translate("The name of the Bible is"):
+##bible##
+<a href="?bible=">[translate ("change")]</a>.
 </p>
 
 <br>
