Updated link to alkitabkita.info
https://github.com/bibledit/cloud/issues/487

--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -22,7 +22,7 @@ translate("The name of the Bible is"):
 
 <br>
 <p>
-<a href="https://albata.info" target="_blank">translate ("Visit albata.info for more information.")</a>
+<a href="http://alkitabkita.info" target="_blank">translate ("Visit alkitabkita.info for more information.")</a>
 </p>
 
 <script type="text/javascript" src="../assets/checkbox.js"></script>
