A higher role can go to advanced mode
https://github.com/bibledit/cloud/issues/487

--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -25,5 +25,15 @@ translate("The name of the Bible is"):
 <a href="http://alkitabkita.info" target="_blank">translate ("Visit alkitabkita.info for more information.")</a>
 </p>
 
+<!-- #BEGINZONE can_use_advanced_mode -->
+<br>
+<p>
+<a href="/index/index?mode=advanced">translate ("Switch to advanced mode.")</a>
+</p>
+<!-- #ENDZONE can_use_advanced_mode -->
+
+
+
+
 <script type="text/javascript" src="../assets/checkbox.js"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
