Done: Setting for font size in the settings page.
https://github.com/bibledit/cloud/issues/487

--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -7,6 +7,40 @@
 <a href="/session/logout">translate ("Logout.")</a>
 </p>
 
+
+<br>
+<p>
+translate("General font size for the interface"):
+<a href="?fontsizegeneral=">##fontsizegeneral##%</a>.
+translate("Size throughout the interface.")
+</p>
+<p>
+translate("Relative font size for the menu"):
+<a href="?fontsizemenu=">##fontsizemenu##%</a>.
+translate("The size of the font for the menu, relative to the general font size.")
+</p>
+<p>
+translate("Relative font size for the Bible editors"):
+<a href="?fontsizeeditors=">##fontsizeeditors##%</a>.
+translate("The size of the font for the Bible editors, relative to the general font size.")
+</p>
+<p>
+translate("Relative font size for the resources"):
+<a href="?fontsizeresources=">##fontsizeresources##%</a>.
+translate("The size of the font for the resources, relative to the general font size.")
+</p>
+<p>
+translate("Relative font size for Hebrew resources"):
+<a href="?fontsizehebrew=">##fontsizehebrew##%</a>.
+translate("The size of Hebrew text within resources, relative to the resources font size.")
+</p>
+<p>
+translate("Relative font size for Greek resources"):
+<a href="?fontsizegreek=">##fontsizegreek##%</a>.
+translate("The size of Greek text within resources, relative to the resources font size.")
+</p>
+
+
 <br>
 <p>
 translate("The language for Bibledit:")
