--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.937: The settings for Accordance are no longer visible in basic mode.</p>
+<p>5.0.937: Minor updates tailored to an Indonesian version of Bibledit Cloud.</p>
 <p>5.0.937: The USFM editor can load text in corrupted encoding and save it as valid UTF-8 Unicode.</p>
 <p>5.0.936: Allows a space at the end of a line in the verse editor to exist multiple seconds before the editor trims it away.</p>
 <p>5.0.935: Configure the https port of embedded webserver, or disable it.</p>
