--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.937: Update mbedTLS to version 2.25.</p>
 <p>5.0.937: The settings for Accordance are no longer visible in basic mode.</p>
 <p>5.0.937: Minor updates tailored to an Indonesian version of Bibledit Cloud.</p>
 <p>5.0.937: The USFM editor can load text in corrupted encoding and save it as valid UTF-8 Unicode.</p>
