--- a/resource/divider.html
+++ b/resource/divider.html
@@ -16,3 +16,10 @@ translate("Link"):
 <a href="divider?link=">[translate ("edit")]</a>
 </p>
 
+<p><a href="divider?foreground=">translate("Edit text colour")</a></p>
+
+<p><a href="divider?background=">translate("Edit background colour")</a></p>
+
+<br>
+<p><a href="divider?add=">translate("Add it to the Resources")</a></p>
+
