New users can click an account confirmation link received by email
https://github.com/bibledit/cloud/issues/499
https://github.com/bibledit/cloud/issues/497

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.939: New users can click an account confirmation link received by email.</p>
 <p>5.0.939: Studylight resources display again.</p>
 <p>5.0.939: Rich divider with text and link and colour.</p>
 <p>5.0.939: Dividers in Resources are shorter in height.</p>
