--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.940: Abbott-Smith's Manual Greek Lexicon was added.</p>
 <p>5.0.940: A comparative resource displays the difference between two resources.</p>
 <p>5.0.939: New users can click an account confirmation link received by email.</p>
 <p>5.0.939: Studylight resources display again.</p>
