Comparative resource: Edit base and updated resource
https://github.com/bibledit/cloud/issues/504

--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -1,31 +1,30 @@
-<h2>translate("User-defined resource") "##name##"</h2>
+<h2>translate("Comparative resource") "##name##"</h2>
+
 <p class="success">##success##</p>
 <p class="error">##error##</p>
-<form action="?name=##name##" name="form" method="post">
-  <p><textarea name="data">##data##</textarea></p>
-  <p><input type="submit" name="submit" value=translate("Save") /></p>
-</form>
-<br>
-<p>translate("To update the user-defined resource, make changes above, and save them.")</p>
+
+<p>translate("Title"): ##name##</p>
+
 <br>
 <p>
-translate("The first line will be the internet address of the resource.")
-translate("For example:")
+translate("Base resource"):
+##base##
+<a href="comparative1edit?name=##name##&base=">[translate ("edit")]</a>
 </p>
-<br>
-<p><code>##url##</code></p>
-<br>
+
 <p>
-translate("The next lines will be the names or abbreviations for all the Bible books.")
-translate("For example:")
+translate("Updated resource"):
+##update##
+<a href="comparative1edit?name=##name##&update=">[translate ("edit")]</a>
 </p>
-<br>
-<p><code>Genesis = gen</code></p>
-<br>
 <p>
-translate("When fetching the user-defined resource, Bibledit will take the internet address, and replace the three words in brackets with the values of the passage to fetch.")
-translate("The book will be replaced with the book name or abbreviation, for example Matthew.")
-translate("The chapter and the verse will be replaced with the appropriate numbers.")
+translate("This resource will display the base resource as a starting point.")
+translate("It will compare the updated resource with the base resource.")
+translate("Any extra words that the updated resource has added as compared to the base resource will be shown in bold.")
+translate("Any words that were removed will be shown in strikethrough.")
 </p>
+
+
 <br>
-<p><a href="comparative9edit?delete=##name##">translate("Erase this resource.")</a></p>
+<p><a href="comparative9edit">translate("Ready")</a></p>
+<p><a href="comparative9edit?delete=##name##">translate("Delete")</a></p>
