--- a/resource/select.html
+++ b/resource/select.html
@@ -15,5 +15,5 @@
 <p><a href="?page=##page##&biblegateway=">translate("BibleGateway resources")</a></p>
 <p><a href="?page=##page##&studylight=">translate("StudyLight resources")</a></p>
 <!-- #ENDZONE sensitive_bible_resource -->
-<p><a href="comparative">translate("Comparative Resource")</a></p>
+<p><a href="?page=##page##&comparative=">translate("Comparative resources")</a></p>
 <h3><a href="##caller##">translate("Cancel")</a></h3>
