--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -18,9 +18,9 @@ translate("Updated resource"):
 <a href="comparative1edit?name=##name##&update=">[translate ("edit")]</a>
 </p>
 <p>
-translate("This resource will display the base resource as a starting point.")
+translate("This resource will take the base resource as a starting point.")
 translate("It will compare the updated resource with the base resource.")
-translate("Any extra words that the updated resource has added as compared to the base resource will be shown in bold.")
+translate("Any words that the updated resource has added as compared to the base resource will be shown in bold.")
 translate("Any words that were removed will be shown in strikethrough.")
 </p>
 
