--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -24,6 +24,17 @@ translate("Any words that the updated resource has added as compared to the base
 translate("Any words that were removed will be shown in strikethrough.")
 </p>
 
+<br>
+<p>
+translate("Characters to remove"):
+##remove##
+<a href="comparative1edit?name=##name##&remove=">[translate ("edit")]</a>
+</p>
+<p>
+translate("Characters to be removed from the base and updated resources before doing the comparison.")
+translate("Separate the characters by spaces.")
+translate("Example"): . ! ? :
+</p>
 
 <br>
 <p><a href="comparative9edit">translate("Ready")</a></p>
