Characters to search for and replace before the comparison
https://github.com/bibledit/cloud/issues/504

--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -37,5 +37,21 @@ translate("Example"): . ! ? :
 </p>
 
 <br>
+<p>
+translate("Characters to replace"):
+##replace##
+<a href="comparative1edit?name=##name##&replace=">[translate ("edit")]</a>
+</p>
+<p>
+translate("Characters to search for and be replaced in the base and updated resources before doing the comparison.")
+translate("Separate the sets by spaces.")
+translate("First enter the characters to search for.")
+translate("Then enter the = sign.")
+translate("Finally enter the characters to be substituted.")
+translate("Example"): ῃ=η ῳ=ω search=replace
+</p>
+
+
+<br>
 <p><a href="comparative9edit">translate("Ready")</a></p>
 <p><a href="comparative9edit?delete=##name##">translate("Delete")</a></p>
