--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.940: Emailer already works when it can send email only, not receive yet.</p>
 <p>5.0.940: Better focus handling of the verse editor within a workspace.</p>
 <p>5.0.940: Bibledit editors accept text growth always regardless of the settings for the maximum allowed change in the editors.</p>
 <p>5.0.940: Updated default values for several personal preferences making things easier for new users.</p>
