--- a/manage/accounts.html
+++ b/manage/accounts.html
@@ -3,8 +3,11 @@
   <thead>
     <tr>
       <td class="center"></td>
+      <td class="center">|</td>
       <td class="center">translate("Username")</td>
+      <td class="center">|</td>
       <td class="center">translate("Role")</td>
+      <td class="center">|</td>
       <td class="center">translate("Email")</td>
     </tr>
   </thead>
@@ -12,8 +15,11 @@
     <!-- #BEGINITERATION tbody -->
     <tr>
       <td class="center"><a href="?user=##user##&delete">🗑</a></td>
+      <td class="center">|</td>
       <td class="center">##user##</td>
+      <td class="center">|</td>
       <td class="center">##role##</td>
+      <td class="center">|</td>
       <td class="center">##email##</td>
     </tr>
     <!-- #ENDITERATION tbody -->
