--- a/manage/accounts.html
+++ b/manage/accounts.html
@@ -3,11 +3,13 @@
   <thead>
     <tr>
       <td class="center"></td>
-      <td class="center">|</td>
+      <td class="center"></td>
       <td class="center">translate("Username")</td>
-      <td class="center">|</td>
+      <td class="center"></td>
+      <td class="center">translate("Days")</td>
+      <td class="center"></td>
       <td class="center">translate("Role")</td>
-      <td class="center">|</td>
+      <td class="center"></td>
       <td class="center">translate("Email")</td>
     </tr>
   </thead>
@@ -17,6 +19,8 @@
       <td class="center"><a href="?user=##user##&delete">🗑</a></td>
       <td class="center">|</td>
       <td class="center">##user##</td>
+      <td class="center">|</td>
+      <td class="center">##days##</td>
       <td class="center">|</td>
       <td class="center">##role##</td>
       <td class="center">|</td>
