--- a/system/index.html
+++ b/system/index.html
@@ -88,7 +88,15 @@ translate("You can add or remove fonts in Bibledit Cloud:")
 
 <!-- #BEGINZONE cloud -->
 <h3>translate("Cache")</h3>
-<p><a href="?clearcache=">translate("Clear the web cache and the resources cache.")</a></p>
+<p><a href="?clearcache=">translate("Clear the web cache and the resources cache now.")</a></p>
+<p>
+<input type="checkbox" name="keepcache" onchange="checkbox(this)" ##keepcache## />
+translate("Keep the resources cache for an extended period of time.")
+</p>
+<p>
+translate("Normally expired resources get trimmed away fairly soon.")
+translate("Keeping the resources cache for an extended period of time makes resources downloads by Bibledit clients much faster.")
+</p>
 <!-- #ENDZONE cloud -->
 
 <!-- #BEGINZONE cloud -->
