--- a/system/index.html
+++ b/system/index.html
@@ -92,10 +92,7 @@ translate("You can add or remove fonts in Bibledit Cloud:")
 <p>
 <input type="checkbox" name="keepcache" onchange="checkbox(this)" ##keepcache## />
 translate("Keep the resources cache for an extended period of time.")
-</p>
-<p>
-translate("Normally expired resources get trimmed away fairly soon.")
-translate("Keeping the resources cache for an extended period of time makes resources downloads by Bibledit clients much faster.")
+translate("This makes the second and subsequent resources downloads by Bibledit clients much faster.")
 </p>
 <!-- #ENDZONE cloud -->
 
