--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.941: Faster mechanism to retrieve bulk content from SWORD books.</p>
 <p>5.0.941: Can keep the resources cache for an extended period of time.</p>
 <p>5.0.941: Show password button on login page.</p>
 <p>5.0.940: The chapter editor is now live-updatable and no longer does a complete text reload.</p>
