Notes editor takes general font settings
https://github.com/bibledit/cloud/issues/518

--- a/notes/comment.html
+++ b/notes/comment.html
@@ -9,7 +9,7 @@
   <input type="submit" id="create2" value="translate("Create")" />
   <input type="submit" id="cancel2" value="translate("Cancel")" />
 </p>
-<link rel="stylesheet" type="text/css" href="../quill/quill.snow.css?##VERSION##">
+<link rel="stylesheet" type="text/css" href="../quill/quill.notes.css?##VERSION##">
 <script type="text/javascript" src="/filter/url.js?##VERSION##"></script>
 <script src="../quill/quill.min.js?##VERSION##"></script>
 <script src="quill.js?##VERSION##"></script>
