--- a/notes/create.html
+++ b/notes/create.html
@@ -15,7 +15,7 @@
 <input type="hidden" id="book" value="##book##" />
 <input type="hidden" id="chapter" value="##chapter##" />
 <input type="hidden" id="verse" value="##verse##" />
-<link rel="stylesheet" type="text/css" href="../quill/quill.snow.css?##VERSION##">
+<link rel="stylesheet" type="text/css" href="../quill/quill.notes.css?##VERSION##">
 <script type="text/javascript" src="/filter/url.js?##VERSION##"></script>
 <script src="../quill/quill.min.js?##VERSION##"></script>
 <script src="quill.js?##VERSION##"></script>
