A client can display and cache a comparative resource
https://github.com/bibledit/cloud/issues/539

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.942: A client can display and cache a comparative resource.</p>
 <p>5.0.942: Navigation through Ctrl-G now supports navigation history.</p>
 <p>5.0.941: Move consultation note editors from NicEdit to Quill.</p>
 <p>5.0.941: Faster mechanism to retrieve bulk content from SWORD books.</p>
