Extended Android installation options
https://github.com/bibledit/cloud/issues/553

--- a/help/installandroid.html
+++ b/help/installandroid.html
@@ -18,4 +18,21 @@
   translate("Connect to Bibledit Cloud via menu Settings / Cloud.")
 </li>
 
+</ol>
+
+<p>
+translate("Alternative installation options:")
+</p>
+<ol>
+
+<li>
+  <a href="https://appgallery.huawei.com/#/app/C102596295" ##external##>HUAWEI AppGallery</a>
+</li>
+
+<li>
+  <a href="https://github.com/bibledit/android/releases" ##external##>Sideloading via GitHub</a>
+</li>
+
+</ol>
+
 <script type="text/javascript" src="../assets/external.js"></script>
