--- a/read/index.html
+++ b/read/index.html
@@ -2,7 +2,7 @@
   ##custom_css##
   </style>
 <div id="editorheader">
-  <div id="editorinnerheader">
+  <div id="editorinnerheader" class="##editor_theme_color##">
     <span id="nostyles">
       <a id="bibleselect" href="index?changebible=">##bible##</a>
       |
@@ -10,10 +10,10 @@
     </span>
   </div>
 </div>
-<div id="oneprefix" class="bibleeditor ##custom_class##"></div>
-<div id="oneeditor" class="bibleeditor ##custom_class##"></div>
-<div id="onesuffix" class="bibleeditor ##custom_class##"></div>
-<div id="onetemp" class="bibleeditor ##custom_class##"></div>
+<div id="oneprefix" class="bibleeditor ##custom_class## ##editor_theme_color##"></div>
+<div id="oneeditor" class="bibleeditor ##custom_class## ##active_editor_theme_color##"></div>
+<div id="onesuffix" class="bibleeditor ##custom_class## ##editor_theme_color##"></div>
+<div id="onetemp" class="bibleeditor ##custom_class## ##editor_theme_color##"></div>
 <script>
   ##script##
 </script>
