--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -43,6 +43,17 @@ translate("The size of Greek text within resources, relative to the resources fo
 
 <br>
 <p>
+  <label for="themepicker">translate("Choose theme"):</label>
+  <select id="themepicker" name="themepicker" value="##themepicker##">
+    <option value="0" ##themepickerindex0##>Basic</option>
+    <option value="1" ##themepickerindex1##>Light</option>
+    <option value="2" ##themepickerindex2##>Dark</option>
+  </select>
+</p>
+
+
+<br>
+<p>
 translate("The language for Bibledit:")
 <a href="?language=select">##language##</a>.
 </p>
@@ -64,3 +75,4 @@ translate("The language for Bibledit:")
 
 <script type="text/javascript" src="../assets/checkbox.js"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
+<script type="text/javascript" src="../personalize/index.js"></script>
