--- a/editone2/index.html
+++ b/editone2/index.html
@@ -34,7 +34,7 @@
 <script type="text/javascript" src="/editor/select.js?##VERSION##"></script>
 <script type="text/javascript" src="/quill/quill.min.js?##VERSION##"></script>
 <script type="text/javascript" src="/jquery/jquery.stylesheet.js?##VERSION##"></script>
-<script type="text/javascript" src="/edit2/embed.js?##VERSION##"></script>
+<script type="text/javascript" src="/edit/embed.js?##VERSION##"></script>
 <script type="text/javascript" src="/assets/editor.js?##VERSION##"></script>
 <script type="text/javascript" src="/filter/focus.js?##VERSION##"></script>
 <script type="text/javascript" src="index.js?##VERSION##"></script>
