--- a/help/installandroid.html
+++ b/help/installandroid.html
@@ -24,15 +24,15 @@
 translate("Alternative installation options:")
 </p>
 <ol>
-
 <li>
   <a href="https://appgallery.huawei.com/#/app/C102596295" ##external##>HUAWEI AppGallery</a>
 </li>
-
 <li>
   <a href="https://github.com/bibledit/android/releases" ##external##>Sideloading via GitHub</a>
 </li>
-
+<li>
+  <a href="https://www.f-droid.org" ##external##>F-Droid catalog and sharing mechanism</a>
+</li>
 </ol>
 
 <script type="text/javascript" src="../assets/external.js"></script>
