--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.946: Deletes an email that caused a crash while it was being sent.</p>
 <p>5.0.945: Displays better text from StudyLight.</p>
 <p>5.0.943: Better book interpretation for Ctrl-G fast passage switcher.</p>
 <p>5.0.942: Displays footnotes of BibleGateway resources.</p>
