Setting for exporting footnotes as inline on-hover in html
https://github.com/bibledit/cloud/issues/615

--- a/manage/exports.html
+++ b/manage/exports.html
@@ -33,6 +33,9 @@
 <!-- #ENDZONE cloud -->
 <a href="?htmlnow=">translate("Export now.")</a>
 </p>
+<p>
+<input type="checkbox" name="htmlpopup" onchange="checkbox(this)" ##htmlpopup## /> translate("Display footnote on hovering above footnote caller.")
+</p>
 
 <h3>translate("Full USFM")</h3>
 <p>
