--- a/personalize/index.html
+++ b/personalize/index.html
@@ -4,13 +4,13 @@
 <!-- #BEGINZONE advancedmode -->
 <h3>translate("Preferences")</h3>
 
-<br>
-<p class="settings-container">
-<label for="languageselection">translate("The language for Bibledit:")</label>
-<select id="languageselection" name="languageselection" value="##languageselection##">
-  ##languageselectionoptags##
-</select>
-</p>
+<!--<br>-->
+<!--<p class="settings-container">-->
+<!--<label for="languageselection">translate("The language for Bibledit:")</label>-->
+<!--<select id="languageselection" name="languageselection" value="##languageselection##">-->
+<!--  ##languageselectionoptags##-->
+<!--</select>-->
+<!--</p>-->
 <!-- #ENDZONE advancedmode -->
 
 <br>
