Setting for whether to cache comparative resource
https://github.com/bibledit/cloud/issues/626

--- a/resource/comparative1edit.html
+++ b/resource/comparative1edit.html
@@ -64,6 +64,15 @@ translate("Do case folding of the resources before doing the comparison.")
 </p>
 
 <br>
+<p>
+<input type="checkbox" name="cache" onchange="checkbox(this)" ##cache## />
+translate("Cache the resource on client devices.")
+translate("Caching makes the resource available offline.")
+translate("Caching makes a snapshot of the base and updated resources.")
+translate("If the base or updated resources change after the snapshot, the client device does not display those changes.")
+</p>
+
+<br>
 <p><a href="comparative9edit">translate("Resource is ready")</a></p>
 <br>
 <p><a href="comparative9edit?delete=##name##">translate("Delete this resource")</a></p>
