Add version number to .js
https://github.com/bibledit/cloud/issues/640

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -78,4 +78,4 @@ translate("Stylesheet"):
 <!-- #ENDZONE write_access -->
 </p>
 
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
