--- a/checks/settings.html
+++ b/checks/settings.html
@@ -108,4 +108,4 @@ translate ("The results will also be emailed to all users who have enabled this 
 <!-- #ENDZONE cloud -->
 </p>
 
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
