--- a/manage/exports.html
+++ b/manage/exports.html
@@ -166,5 +166,5 @@ translate("The help within the Online Bible provides more information about crea
 
 <br>
 <hr>
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
