--- a/notes/actions.html
+++ b/notes/actions.html
@@ -66,3 +66,4 @@ translate("Public note:")
 <p class="error">##error##</p>
 <p class="success">##success##</p>
 <script type="text/javascript" src="poll.js?##VERSION##"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
