--- a/resource/organize.html
+++ b/resource/organize.html
@@ -16,6 +16,6 @@ translate("Display related passages")</p>
 <!-- #BEGINZONE client -->
 <p><a href="?install">translate("Install all the above resources on the device.")</a></p>
 <!-- #ENDZONE client -->
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
 <script type="text/javascript" src="../slip/slip.js"></script>
 <script type="text/javascript" src="organize.js"></script>
