--- a/sendreceive/index.html
+++ b/sendreceive/index.html
@@ -121,5 +121,5 @@ translate("View the history:")
 
 <p><a href="/journal/index">translate("The Journal displays progress and diagnostic messages.")</a></p>
 <p id="status"></p>
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
 <script type="text/javascript" src="index.js?"></script>
