--- a/system/index.html
+++ b/system/index.html
@@ -105,5 +105,5 @@ translate("Number of emails still to be sent:")
 </p>
 <!-- #ENDZONE cloud -->
 
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
