--- a/system/indonesianfree.html
+++ b/system/indonesianfree.html
@@ -73,6 +73,6 @@ translate("The language for Bibledit:")
 
 
 
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
 <script type="text/javascript" src="../personalize/index.js"></script>
