--- a/user/notifications.html
+++ b/user/notifications.html
@@ -132,4 +132,4 @@ translate("Receive daily mail with results of checks on the text of the Bibles."
 <!-- #ENDZONE server -->
 
 <br>
-<script type="text/javascript" src="../assets/checkbox.js"></script>
+<script type="text/javascript" src="../assets/checkbox.js##VERSION##"></script>
